--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
   <h2>Our Custom Shirts</h2>
   <div class="products">
 
+    <!-- Shirt 1 -->
     <div class="card">
-      <img src="https://via.placeholder.com/280x280?text=Shirt+1" alt="Shirt 1">
+      <img src="https://via.placeholder.com/280x280?text=Premium+White+Shirt" alt="Premium White Shirt">
       <h3>Classic White Shirt</h3>
       <p>High-quality cotton, tailored to fit perfectly.</p>
       <p class="price">₦25,000</p>
@@ -159,8 +160,9 @@
       </div>
     </div>
 
+    <!-- Shirt 2 -->
     <div class="card">
-      <img src="https://via.placeholder.com/280x280?text=Shirt+2" alt="Shirt 2">
+      <img src="https://via.placeholder.com/280x280?text=Elegant+Black+Shirt" alt="Elegant Black Shirt">
       <h3>Elegant Black Shirt</h3>
       <p>Perfect for formal or casual premium wear.</p>
       <p class="price">₦30,000</p>
@@ -175,8 +177,9 @@
       </div>
     </div>
 
+    <!-- Shirt 3 -->
     <div class="card">
-      <img src="https://via.placeholder.com/280x280?text=Shirt+3" alt="Shirt 3">
+      <img src="https://via.placeholder.com/280x280?text=Graphic+Designer+Tee" alt="Graphic Designer Tee">
       <h3>Graphic Designer Tee</h3>
       <p>Unique prints designed just for you.</p>
       <p class="price">₦35,000</p>
@@ -196,7 +199,7 @@
 
 <div class="section" id="contact">
   <h2>Contact Us</h2>
-  <p>Email: your@email.com</p>
+  <p>Email: <a href="mailto:tobialatishe746@gmail.com">tobialatishe746@gmail.com</a></p>
   <p>Phone/WhatsApp: <a href="https://wa.me/2347014961792" target="_blank">07014961792</a></p>
 </div>
 
